# compiler_project

./: ApproxFluid.sln  CMakeLists.txt  fluid.cc  fluid.gen.cc  fluid.hh
FluidProject/: ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Makefile  main.cpp  resource.h
FluidProject/apps/: bellman_ford.h  conv.h  graphcolor.h  graphcolor_fluid.cpp  kmeans.h  kmeans_fluid.cpp  kmeans_para.hh  matrix_fluid.h  sobel.h  sobel_fluid.h  sssp_fluid.h
FluidProject/fluid/: data.h  fluid.h  guard.cpp  guard.h  guardscheduler.cpp  guardscheduler.h  guardstates.cpp  guardstates.h  syncds.h  tasklet.h  thread.h
FluidProject/output/: 10.kmeans.rgb  11.kmeans.rgb
FluidProject/results/: SSSPBFFluidSpec-10.rgb.539314573.out
FluidProject/utils/: logger.h  profiler.h  timer.h
apps/: bellman_ford.cpp  bellman_ford_fluid.cpp  bellman_ford_fluid.h  experiments.cpp  experiments.h  graphcolor.cpp  graphcolor_fluid.h  kmeans.cpp  kmeans_fluid.cpp~  kmeans_fluid.h  kmeans_para.cpp  matrix.h  rgb_image.h  sobel.cpp  sobel_fluid.cpp  sssp.cpp  sssp.h  sssp_fluid.cpp
compiler/: compiler.py  test_out.cpp  test_out.h  tmp.cpp  tmp.h
compiler/input/: kmeans.cpp  test.cpp  test.h
compiler/output/: kmeans_bk.cpp  test_out.cpp  test_out.h
example/: example.cpp
fluid/: guardstates.h  signal.h  tasklet.cpp  taskscheduler.cpp  taskscheduler.hh  valve.h
src/: 0-abstract.tex  1-intro.tex  2-EagerExecution.tex  3-language.tex  4-compiler.tex  5-runtime.tex  6-evaluation.tex  7-related.tex  conc.tex
utils/: logger.cpp  timer.cpp
